feat: adicionado testes unitários